--- a/package.json
+++ b/package.json
@@ -7,12 +7,21 @@
     "@types/node": "^12.6.1",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
+    "@types/react-redux": "^7.1.1",
     "@types/styled-components": "^4.1.16",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
+    "redux": "^4.0.2",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "styled-components": "^4.3.2",
-    "typescript": "3.5.3"
+    "styled-reset": "^2.0.16",
+    "typesafe-actions": "^4.4.2",
+    "typescript": "3.5.3",
+    "utility-types": "^3.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
